--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.2",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
-    "typescript": "^5.2.2",
     "web-vitals": "^2.1.4",
     "zustand": "^4.4.1"
   },
